[package]
name = "hoymiles-rs"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-log = "0.1"
serde_json = "1.0"
prost = "0.9"
prost-types = "0.9"
md5 = "0.7"
clap = { version = "4", features = ["derive", "env", "string"] }
dotenv = "0.15"

[build-dependencies]
prost-build = "0.9"
