[package]
name = "hoymiles-rs"
version = "1.0.1"
edition = "2021"
authors = ["Bastian Gruber <foreach@me.com>"]
rust-version = "1.73"
description = "A CLI to interact with Hoymiles solar panel installations and fetch data."
readme = "README.md"
repository = "https://github.com/gruberb/hoymiles-rs"
license = "MIT"
keywords = ["hoymiles", "solarpanel", "cli", "api", "monitoring"]
categories = ["command-line-utilities", "network-programming"]
build = "build.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-log = "0.1"
serde_json = "1.0"
prost = "0.9"
prost-types = "0.9"
md5 = "0.7"
clap = { version = "4", features = ["derive", "env", "string"] }
dotenv = "0.15"
csv = "1.1"

[build-dependencies]
prost-build = "0.9"
